email spam detection

--- a/email_spam-detection.ipynb
+++ b/email_spam-detection.ipynb
@@ -843,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "93c281cb",
    "metadata": {},
    "outputs": [
@@ -1262,10 +1262,10 @@
     }
    ],
    "source": [
-    "# Drop empty columns\n",
+    "# Drop columns with upto 90% nulls\n",
     "drop_cols = summary[(summary['missing_percent'] >= 90)].index.tolist()\n",
     "\n",
-    "# Drop known IDs\n",
+    "# Drop user info\n",
     "drop_cols += [\"EntityId\",\"MachineName\",\"TenantId\",\"UserId\",\"EmailAddress\",\"ClientIP\", \"__date\"]\n",
     "\n",
     "df_dropped = df.drop(columns=drop_cols, errors=\"ignore\")\n",
@@ -1440,11 +1440,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6b117f1b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#encode the recipient type column\n",
     "df_dropped['RecipientType'] = df_dropped['RecipientType'].map({\n",
     "    'UserMailbox': 0,\n",
     "    'MailUniversalDistributionGroup':1\n",
@@ -1453,11 +1454,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "6b30e2fb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#encode the client type column\n",
     "encoder = LabelEncoder()\n",
     "df_dropped['ClientType'] = encoder.fit_transform(df_dropped['ClientType'])"
    ]
@@ -1472,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "482539e3",
    "metadata": {},
    "outputs": [
@@ -1879,7 +1881,7 @@
    ],
    "source": [
     "#drop columns with low variance\n",
-    "selector = VarianceThreshold(threshold=0.01)  \n",
+    "selector = VarianceThreshold(threshold=0.01) \n",
     "df_selected = selector.fit_transform(df_dropped)\n",
     "selected_columns = df_dropped.columns[selector.get_support()]\n",
     "df_selected = pd.DataFrame(df_selected, columns=selected_columns)\n",
@@ -1888,7 +1890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7da5576d",
    "metadata": {},
    "outputs": [
@@ -1904,7 +1906,7 @@
     }
    ],
    "source": [
-    "#handle multicollinearity\n",
+    "# show collinearity\n",
     "corr_matrix = df_selected.corr()\n",
     "\n",
     "\n",
@@ -2591,7 +2593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "32b14c03",
    "metadata": {},
    "outputs": [
@@ -2610,7 +2612,7 @@
     "pc1 = df_pca[:, 0]\n",
     "pc2 = df_pca[:, 1]\n",
     "\n",
-    "# Identify overlapping anomalies\n",
+    "# overlapping anomalies\n",
     "suspicious_mask = (dbscan_labels == -1) & (iforest_labels == -1)\n",
     "\n",
     "plt.figure(figsize=(8,6))\n",
@@ -2626,7 +2628,7 @@
     "plt.scatter(pc1[dbscan_only], pc2[dbscan_only], c='orange', s=30, alpha=0.6, label='DBSCAN Noise Only')\n",
     "plt.scatter(pc1[iforest_only], pc2[iforest_only], c='purple', s=30, alpha=0.6, label='IsolationForest Only')\n",
     "\n",
-    "# Plot overlapping anomalies\n",
+    "# overlapping anomalies\n",
     "plt.scatter(pc1[suspicious_mask], pc2[suspicious_mask], c='red', s=50, alpha=0.8, label='Both Methods')\n",
     "\n",
     "plt.xlabel(\"PC1\")\n",
@@ -2689,7 +2691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1dfaa127",
    "metadata": {},
    "outputs": [
@@ -2741,9 +2743,7 @@
     }
    ],
    "source": [
-    "# pca = trained PCA object\n",
-    "# original_feature_names = list of names from df_selected\n",
-    "\n",
+    "#get the top features contributiing to the PCA features\n",
     "for top_pc_name in top_pcs:\n",
     "    pc_index = int(top_pc_name.replace('PC','')) - 1\n",
     "    loadings = pd.Series(pca.components_[pc_index], index=df_selected.columns)\n",
